fix(item-devider): add missing padding left on RTL
Add missing padding left on RTL

--- a/src/components/item/item.md.scss
+++ b/src/components/item/item.md.scss
@@ -287,6 +287,7 @@ ion-item-group .item-md .item-wrapper:last-child .item-inner {
 
 [dir="rtl"] .item-divider-md {
   padding-right: $item-md-padding-left;
+  padding-left: 0;
 }
 
 
